# C-Crypto-Platform

./: .clang-format  .gitignore  AutoTrader.cpp  AutoTrader.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h  README.md  Wallet.cpp  Wallet.h  a.out  env.yaml  env.yml  main.cpp
apps/: CMakeLists.txt  main.cpp
crypto-platform/: AutoTrader.cpp  AutoTrader.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  MatchingSystem.cpp  MatchingSystem.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBook2.cpp  OrderBook2.h  OrderBookEntry.cpp  OrderBookEntry.h  Strategies.cpp  Strategies.h  Stratergies.cpp  Stratergies.h  TradeBookEntry.cpp  TradeBookEntry.h  Wallet.cpp  Wallet.h
tests/: CMakeLists.txt  TestCSVReader.cpp  TestMatchingSystem.cpp  TestOrderBook.cpp  TestOrderBook2.cpp  TestStratergies.cpp
